Changes from papeeria

--- a/KristinaFedorenko_new.tex
+++ b/KristinaFedorenko_new.tex
@@ -16,9 +16,8 @@
 
 % Header
 \firstname{Kristina}\familyname{Fedorenko}
-\address{}{Moscow, Russia}
-\mobile{+79037632683
-}
+\address{}{Amsterdam, Netherlands}
+\mobile{+31 6 29737202}
 \email{kr.fedorenko@gmail.com}
 \quote{Data scientist}
 
@@ -26,22 +25,27 @@
 \maketitle
 
 \section{Employment}
-\cventry{Mar 2012--Nov 2013}{Saint Petersburg}{Adriver}{Data Scientist} \newline
-    {Adriver is one of the biggest online advertising companies in Russia. I was a member of the team working on prediction of an action done by a user, like click on banner, registration on a site or buying some goods. According to our prediction the company showed different kind of ads.
-    As a member of such a team I was involved in preparation of huge datasets (dozens of gigabytes) including filtering out noise observations, getting rid of outliers and converting data to convenient format. I spent some time on inventing new variables for data mining models and adjusting algorithms and models according to different nature of data and improving accuracy of predictions.}
-    
-\cventry{Nov 2013--Jun 2015}{Saint Petersburg}{Adriver}{Senior Data Scientist} \newline
-    {After working at the company more than a year and a half I was promoted. At that point I started designing and implementing data mining solutions for online advertisement. I was working on classifying users according to their behavior in order to show them the most relevant ads. Also I did some work on geotargeting. Aside of tasks involving writing new models, I was involved in improving existing solutions and testing new ways of doing things. Also, I wrote department's column in an internal company's blog.\newline
-    Almost all the work was done using R, python, awk and bash scripts. Also I had some experience with spark and H2O.}
-
-\cventry{Jun 2015--Mar 2016}{Moscow}{Data Centric Alliance}{Senior Data Scientist} \newline
-    {Data Centric Alliance is an online advertising company. It works with many companies of very different fields ranging from real estate and cars to grocery stores and energy drinks.
-    I'm a part of the data science team which works with big data. My work is  related to users classification like gender and age prediction. I research algorithms and approaches. Also I contributed to the company's blog and organized and participated in meetups and tech talks. \newline
-    All the data science is done with python and scala using spark and hadoop. I use hbase, hdfs, hive and bash on the regular bases. In order to process data I write MapReduce jobs using scala or python.
-    }
-    \cventry{Mar 2016--Present}{Moscow}{Mail.Ru Group}{Data Scientist} \newline
+\cventry{Mar 2012 -- Jun 2015}{Data Scientist at Adriver}{Saint Petersburg, Russia}{} \newline
     {
-   I work in the biggest online russian company. Here I'm solving text classification problem. The main question of the problem is "What is this message about: is it about travel, or it's order confirmation e-mail?" \newline For solving this problem I use python, mysql, hadoop, pig for sample creation.  Vowpal wabbit and sklearn for building models. }
+    Adriver is a big online advertising company which shows 2 billion banners a day. I was a member of R\&D team which was developing algorithms for detecting target audience based on user's clickstream. \\ 
+    My responsibility was building data mining models which predict probability of user click on banner. The models was based on random forest, gradient boosting machine, logistic regression, Naive Bayes and so on.  
+       }
+    
+
+\cventry{Jun 2015 -- Mar 2016}{Data Scientist at Data Centric Alliance}{Moscow, Russia}{} \newline
+    {
+     Data Centric Alliance is an online advertising startup. I was a part of the data science team which works with big data. \\ 
+     Almost all the time I was working  on predicting users gender and age  by clickstream. Also I was researching algorithms and approaches for our machine learning tasks. \\ 
+      \vfill
+      We used
+    }
+    \cventry{Mar 2016 -- Feb 2017}{Data Scientist at Mail.Ru Group}{Moscow, Russia}{} \newline
+    {
+   Mail.Ru Group is the largest free email service in the Russian segment of the internet.  \\
+   Our team and I were developing new feature for email service using machine learning.
+   The feature is detecting an email category. For example, trips, purchases and so on. I developed message classifier for several categories for this feature. \\
+   \vfill
+   I used python, mysql, hadoop, pig for sample creation.  Vowpal wabbit and sklearn for building models. }
 
 % ОБРАЗОВАНИЕ --------------------------------------------------------
 \section{Education}
@@ -61,9 +65,9 @@
    % \cvline{Source}{\small \ULurl{http://tinyurl.com/fedorenko-diploma}}
 
 % ТЕХНИЧЕСКИЕ НАВЫКИ -------------------------------------------------
-%\section{Professional Skills}
-%\cvline{Skills}{python, hive, hadoop, hbase, MapReduce, spark, R, awk, bash}
-%\cvline{Operating systems}{GNU Linux, Windows 7}
+\section{Professional Skills}
+\cvline{Skills}{python, hive, pig, hadoop, hbase, R, awk, bash}
+\cvline{Operating systems}{GNU Linux, MacOs}
 
 % ИНОСТРАННЫЕ ЯЗЫКИ --------------------------------------------------
 %\section{Additional info}
